--- a/public/package.json
+++ b/public/package.json
@@ -1,17 +1,28 @@
 {
-    "name": "public-site",
-    "version": "0.1.0",
-    "dependencies": {
-        "axios": "^1.4.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build"
-    },
-    "devDependencies": {
-        "react-scripts": "5.0.1",
-        "tailwindcss": "^4.1.4"
-    }
+  "name": "public-site",
+  "version": "0.1.0",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "npm-force-resolutions": "^0.0.10",
+    "react-scripts": "5.0.1"
+  },
+  "resolutions": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
+    "loader-utils": "^2.0.4",
+    "shell-quote": "^1.8.1",
+    "minimatch": "^9.0.3",
+    "node-forge": "^1.3.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "preinstall": "npx npm-force-resolutions"
+  }
 }
