Fixed index.html locations, updated Dockerfiles, and ensured SQLite3 compatibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:14
+FROM node:16
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN apt-get update && apt-get install -y python3 build-essential
+RUN npm install --build-from-source sqlite3
 COPY . .
 EXPOSE 5000
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
