--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,11 +1,8 @@
-FROM node:14 as build
+FROM node:16
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-COPY . .
 RUN npm run build
-
-FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+RUN npm install -g serve
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["serve", "-s", "build", "-l", "80"]
