--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -2,6 +2,9 @@ FROM node:16
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+COPY . .
+RUN mkdir -p /app/public
+COPY public/index.html /app/public/
 RUN npm run build
 RUN npm install -g serve
 EXPOSE 80
