--- a/public/package.json
+++ b/public/package.json
@@ -13,16 +13,28 @@
     "react-scripts": "5.0.1"
   },
   "resolutions": {
-    "nth-check": "^2.0.1",
-    "postcss": "^8.4.31",
-    "loader-utils": "^2.0.4",
-    "shell-quote": "^1.8.1",
-    "minimatch": "^9.0.3",
-    "node-forge": "^1.3.1"
+    "nth-check": "2.0.1",
+    "postcss": "8.4.31",
+    "loader-utils": "2.0.4",
+    "shell-quote": "1.8.1",
+    "minimatch": "9.0.3",
+    "node-forge": "1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "preinstall": "npx npm-force-resolutions"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
